--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0"
   },
   "devDependencies": {
