--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -215,6 +215,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':@mauron85_react-native-background-geolocation')
 }
 
 // Run this once to be able to run the application with BUCK
