--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,5 +35,7 @@ allprojects {
 
         google()
         maven { url 'https://www.jitpack.io' }
+        
+        maven {url 'https://jcenter.bintray.com'}
     }
 }
