--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mauron85/react-native-background-geolocation": "^0.6.3",
     "@react-native-async-storage/async-storage": "^1.15.15",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/datetimepicker": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.2.1",
@@ -22,6 +23,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-actions-sheet": "^0.5.8",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.7.1",
     "react-native-reanimated": "^2.2.4",
@@ -37,7 +39,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
