--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -217,6 +217,9 @@ dependencies {
     }
 
     compile project(':@mauron85_react-native-background-geolocation')
+
+    implementation project(':react-native-fs')
+    compile project(':@react-native-community_cameraroll')
 }
 
 // Run this once to be able to run the application with BUCK
