--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,10 @@ target 'WellshareUser' do
   
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'WellshareUserTests' do
     inherit! :complete
     # Pods for testing
