--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.7.1",
+    "react-native-month-year-picker": "^1.8.0",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
