--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,6 +136,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -220,6 +221,7 @@ dependencies {
 
     implementation project(':react-native-fs')
     compile project(':@react-native-community_cameraroll')
+    implementation 'com.android.support:multidex:2.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
