--- a/ios/WellshareUser/Info.plist
+++ b/ios/WellshareUser/Info.plist
@@ -65,5 +65,9 @@
 	<string>App requires background tracking</string>
 	<key>NSMotionUsageDescription</key>
 	<string>App requires motion tracking</string>
+  <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>Save photo to your Gallery</string>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Save photo to your Gallery</string>
 </dict>
 </plist>
