--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mauron85/react-native-background-geolocation": "^0.6.3",
     "@react-native-async-storage/async-storage": "^1.15.15",
     "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/datetimepicker": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.2.1",
